Kubernetes/Deployent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myaspnetcoreapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myaspnetcoreapp
  template:
    metadata:
      labels:
        app: myaspnetcoreapp
    spec:
      containers:
      - name: myaspnetcoreapp
        image: syddselin/myaspnetcoreapp:latest
        ports:
        - containerPort: 8080
