Kubernetes/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myaspnetcoreapp-service
spec:
  selector:
    app: myaspnetcoreapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
    type: NodePort
